--- a/Tex/src-DISC/myRef.bib
+++ b/Tex/src-DISC/myRef.bib
@@ -266,7 +266,6 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
   title     = {More Than You Ever Wanted to Know about Synchronization: Synchrobench, Measuring the Impact of the Synchronization on Concurrent Algorithms},
   booktitle = {PPoPP},
   year      = {2015},
-  note      = {to appear},
 }
 
 @InProceedings{LevAriCK2014,
@@ -658,7 +657,31 @@ howpublished= "\url{docs.oracle.com/javase/7/docs/api/java/util/concurrent/Concu
   booktitle = {OPODIS},
  year = {2012},
  pages = {31--45},
- title = {Range Queries in Non-blocking k-ary Search Trees},
+ title = {Range Queries in Non-blocking k-ary Search Trees}, 
+}
 
-  
+@inproceedings{LazyList,
+ author = {Steve Heller and Maurice Herlihy and Victor Luchangco and Mark Moir and William N. {Scherer III} and Nir Shavit},
+ title={A Lazy Concurrent List-Based Set Algorithm},
+ booktitle={9th International Conference on Principles of Distributed Systems (OPODIS)},
+ pages={3-16},
+ year={2006},
+ doi={10.1007/11795490_3},
+ url={http://dx.doi.org/10.1007/11795490_3},
+}
+
+@inproceedings{DavidGT15,
+  author    = {Tudor David and
+               Rachid Guerraoui and
+               Vasileios Trigonakis},
+  title     = {Asynchronized Concurrency: The Secret to Scaling Concurrent Search Data Structures},
+  booktitle = {Proceedings of the Twentieth International Conference on Architectural Support for Programming Languages and Operating Systems, {ASPLOS}},
+  pages     = {631--644},
+  year      = {2015},
+  crossref  = {DBLP:conf/asplos/2015},
+  url       = {http://doi.acm.org/10.1145/2694344.2694359},
+  doi       = {10.1145/2694344.2694359},
+  timestamp = {Thu, 26 Feb 2015 17:21:18 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/asplos/DavidGT15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
