new macros for optimized implementations

--- a/Tex/src-DISC/macros.tex
+++ b/Tex/src-DISC/macros.tex
@@ -38,6 +38,8 @@
 %---------Evaluation Macros-----------------------%
 \newcommand{\autoTree}{LR-Tree\xspace}
 \newcommand{\autoTreap}{LR-Treap\xspace}
+\newcommand{\optAutoTree}{Opt-LR-Tree\xspace}
+\newcommand{\optAutoTreap}{Opt-LR-Treap\xspace}
 \newcommand{\autoSkiplist}{LR-Skiplist\xspace}
 \newcommand{\danaTree}{LO-Tree\xspace}
 \newcommand{\danaAVL}{LO-AVL\xspace}
