--- a/Tex/src-DISC/evaluation2.tex
+++ b/Tex/src-DISC/evaluation2.tex
@@ -1,24 +1,16 @@
 \section{Evaluation}
 \label{sec:eval}
 
-We evaluate the performance of our approach on two types of data
-structures. In Section~\ref{sec:readwrite} we consider search trees
-supporting insert, delete, and get operations, whereas Section~\ref{sec:range}
-focuses on data structures that, in addition, support range queries that retrieve all
-keys within a given range. We compare the performance of our approach in terms of
-throughput to fully pessimistic solutions applying fine-grain locking. These
-algorithms also serve as the lock-based reference implementation at the base of
-our semi-optimistic implementations.
-We further
-compare our approach to software transactional memory and hand-crafted state-of-the-art data structure
-implementations supporting the same functionality.
+We evaluate the performance of our approach on 
+%two types of data structures. In Section~\ref{sec:readwrite} we consider 
+search trees supporting insert, delete, and get operations. 
+%whereas Section~\ref{sec:range}focuses on data structures that, in addition, support range queries that retrieve all keys within a given range. 
+We compare the performance of our approach in terms of
+throughput to fully pessimistic solutions applying fine-grain locking, solutions based on software transactional memory and hand-crafted state-of-the-art data structure
+implementations.
+%Thesealgorithms also serve as the lock-based reference implementation at the base of our semi-optimistic implementations.We furthercompare our approach to software transactional memory and hand-crafted state-of-the-art data structure implementations supporting the same functionality.
 
-We also measured the performance of global lock-based implementations.
-In all workloads, the results were identical or inferior to those
-achieved by pessimistic fine-grain locking. We hence
-omitted these results to avoid obscuring the presentation.
-
-We use the micro-benchmark suite \textit{Synchrobench}~\cite{Gramoli2015}, configured as described below. 
+\paragraph{Methodology} We use the micro-benchmark suite \textit{Synchrobench}~\cite{Gramoli2015}, configured as described below. 
 %We follow a standard evaluation methodology
 %(\cite{DrachslerVY2014,NatarajanM2014,BrownER2014,ArbelA2014}). 
 Each experiment
@@ -27,33 +19,43 @@ randomly chosen operations drawn from the workload distribution, with keys
 selected uniformly at random from the range $[0,2\cdot10^6]$.
 Each trial begins by initiating a new data structure with
 %and applying an untimed pre-filling phase, which continues until the size of the data structure is within 5\% of
-$10^6$ keys. The presented results are the average throughput over all trials.
+$10^6$ keys and a warm-up of five seconds. The presented results are the average throughput over all trials.
 %(with the pre-filling phase excluded).
+We evaluate performance in three representative workloads distributions: a
+\emph{read-only} workload comprised of $100\%$ lookup operations, a \emph{write-dominated}
+workload consisting of insert and delete operations ($50\%$ each), and a
+\emph{mixed workload} with $50\%$ lookups, $25\%$ inserts, and $25\%$
+deletes.
 
-All implementations are written in Java. We ran the experiments on a dedicated machine with
+
+\paragraph{Platform} All implementations are written in Java. We ran the experiments on a dedicated machine with
 four Intel Xeon E5-4650 processors, each with $8$ cores, for a total of $32$ threads
 (with hyper-threading disabled).
 We used Ubuntu 12.04.4 LTS and Java Runtime Environment (build
 1.7.0\_51-b13) using the 64-Bit Server VM (build 24.51-b03, mixed mode).
 
-\subsection{Insert-Delete-Get Operations}
-\label{sec:readwrite}
+%\subsection{Insert-Delete-Get Operations}
+%\label{sec:readwrite}
 
-We start by benchmarking a search-tree supporting the basic insert,
-delete, and get (lookup) operations. Our experiments evaluate unbalanced as well
-as balanced trees.
+\paragraph{Implementations}
+%We start by benchmarking a search-tree supporting the basic insert,
+%delete, and get (lookup) operations. 
+Our experiments evaluate unbalanced as well as balanced trees.
 
-We employ textbook sequential implementations of an unbalanced binary
+We employ textbook sequential implementations of an unbalanced internal binary
 tree, and a treap~\cite{AragonS1989}. To
 generate pessimistic lock-based implementations, we synthesize
 concurrent code by applying the domination locking technique to the sequential
 data structures. The resulting algorithms are denoted \domTree and \domTreap.
 Finally, we manually apply our lock-removal transformation to the reference
 implementations to get our semi-optimistic versions of the code, which we call
-\autoTree and \autoTreap, respectively.
-We also applied Deuce~\cite{Deuce2010}, which is a Java implementation of the TL2 algorithm~\cite{DiceSS2006} to the sequential implementations. The resulting algorithms are denoted \stmTree and \stmTreap.
+\autoTree and \autoTreap, respectively. Our manual transformation was applied line by line without requiring any understanding of the base code. To evaluate the overhead of tracking the \emph{lockedSet} we also applied the optimization described in Section \ref{sssec:alg-normal}, the resulting algorithms are denoted \optAutoTree and \optAutoTreap.   
+We also applied Deuce~\cite{Deuce2010}, which is a Java implementation of the TL2 algorithm~\cite{DiceSS2006} to the sequential implementations. The resulting algorithms are denoted \stmTree and \stmTreap. We further compare our implementations to their hand-crafted state-of-the-art counterparts
+listed in Table~\ref{table:hand-crafted}.
+%\footnote{Unless described otherwise implementations are provided by Synchrobench.}. 
 
-We further compare our implementations to their hand-crafted state-of-the-art counterparts\footnote{Unless described otherwise implementations are provided by Synchrobench}. We compare \autoTree to
+\Xomit{
+We compare \autoTree to
 \begin{description}
 \setlength{\itemsep}{0pt}
 \setlength{\parskip}{0pt}
@@ -71,12 +73,32 @@ We further compare our implementations to their hand-crafted state-of-the-art co
 \item[\friendly] The Contention-Friendly Tree of Crain et al.~\cite{CrainGR2013}.
 %\item[\skiplist] The non-blocking skip-list in the the Java standard library; based on the work of Fraser and Harris~\cite{fraser2004practical}.
 \end{description}
+}
 
-We evaluate performance in three representative workloads distributions: a
-\emph{read-only} workload comprised of $100\%$ lookup operations, a \emph{write-dominated}
-workload consisting of insert and delete operations ($50\%$ each), and a
-\emph{mixed workload} with $50\%$ lookups, $25\%$ inserts, and $25\%$
-deletes.
+\begin{table}
+\begin{tabular}{| l p{2.3in} |l  p{2.3in} |}
+\hline 
+  Unbalanced && Balanced  &\\  \hline 
+  \textbf{\danaTree} &The locked-based unbalanced tree of Drachsler et al.~\cite{DrachslerVY2014} & \textbf{\danaAVL} &The locked-based relaxed balanced AVL tree of
+				Drachsler et al.~\cite{DrachslerVY2014}  \\
+  \textbf{\lockfreeTree} &The lock-free unbalanced tree of Ellen et al.~\cite{EllenFRB2010}  & \textbf{\bronson} &The locked based relaxed balanced AVL tree of Bronson et al.~\cite{BronsonCCO2010} \\
+   && \textbf{\friendly} &The Contention-Friendly Tree of Crain et al.~\cite{CrainGR2013}  \\
+   && \textbf{Skiplist} & Java lock free skiplist \\
+   \hline 
+\end{tabular}
+\caption{Implementations of hand-crafted state-of-the-art data structures. The Implementation of \danaTree was provided by the authors, all other implementations provided by Synchrobenc.\label{table:hand-crafted}}
+% ,provided by Synchrobench unless described otherwise
+
+\end{table}
+
+
+
+We also measured the performance of global lock-based implementations.
+In all workloads, the results were identical or inferior to those
+achieved by pessimistic fine-grain locking. We hence
+omitted these results to avoid obscuring the presentation.
+
+
 
 \paragraph{Results}
 Figure~\ref{evaluation:results:unbalanced}
@@ -100,8 +122,9 @@ of our approach. By profiling the code, we learned
 that the bulk of this overhead stems from the need to track all read objects,
 which is inherent to our transformation.
 This is in contrast with the hand-crafted implementations,
-which have small overhead on reads in this scenario, thanks to either
-wait-free reads (in \danaAVL, \danaTree, \friendly and \lockfreeTree ), or optimistic validation (in \bronson).
+which have small overhead on reads that complete without any retries. 
+
+%thanks to either wait-free reads (in \danaAVL, \danaTree, \friendly and \lockfreeTree ), or optimistic validation (in \bronson).
 
 As the ratio of updates in the workload increases, our implementation
 closes this gap.
@@ -111,20 +134,38 @@ an update phase begins, the operation is not delayed due to concurrent
 read-only operations.
 
 %% Eshcar: discuss small trees? the results are not the same
-We also experimented with smaller trees ($[0,2\cdot10^4]$) to test different
-contention levels (the results appear in Appendix~\ref{sec:appendix:results}).
-The results show that our transformation works better on larger data structures. 
-Indeed, in large data structures, update operations are more likely to operate on disjoint parts
-of the data, allowing high concurrency. 
+%We also experimented with smaller trees ($[0,2\cdot10^4]$) to test different contention levels (the results appear in Appendix~\ref{sec:appendix:results}).
+%The results show that our transformation works better on larger data structures. 
+%Indeed, in large data structures, update operations are more likely to operate on disjoint parts of the data, allowing high concurrency. 
 %This is especially important for the automatic transformation as updates with overlapping lock sets might invalidate each other.
 %; since the results showed similar trends, they are omitted here.
 
+
+\begin{figure*}
+\begin{center}
+\input{plots/unbalanced3}
+\end{center}
+\caption{Throughput of unbalanced data structures.}
+\label{evaluation:results:unbalanced}
+\end{figure*}
+
+
+\begin{figure*}
+\begin{center}
+\input{plots/balanced3}
+\end{center}
+\caption{Throughput of balanced data
+structures.}
+\label{evaluation:results:balanced}
+\end{figure*}
+
+\Xomit{
 \subsection{Range Queries}
 \label{sec:range}
 
 Next we evaluate the performance of our approach when the data
 structure supports a more intricate functionality like range queries.
-\Xomit{
+
 Hand
 crafting an implementation of a data structure that supports atomic
 (linearizable) range queries is challenging.
@@ -134,7 +175,7 @@ progress of range queries.
 The results in this section demonstrate that our method
 allows generating a correct and efficient code, which is otherwise difficult
 to obtain.
-}
+
 We use a skip list, which readily supports range queries by
 nature of its linked-structure. The core of the implementation is the key lookup
 method; once reaching the key, a key can be added or be removed in place, and
@@ -185,56 +226,6 @@ Like many data structure libraries, \friendly and \danaAVL
 do not support atomic range queries, and
 there is no straightforward way to add them.
 
-
-
-% \begin{figure*}
-% \begin{center}
-% \input{plots/range}
-% \end{center}
-% \caption{Throughput of skip-list operations.}
-% \label{evaluation:results:range}
-% \end{figure*}
-
-
-\begin{figure*}
-\begin{center}
-\input{plots/unbalanced3}
-\end{center}
-\caption{Throughput of unbalanced data structures.}
-\label{evaluation:results:unbalanced}
-\end{figure*}
-
-\Xomit{
-\begin{figure*}
-\begin{center}
-\input{plots/unbalanced3small}
-\end{center}
-\caption{Throughput of unbalanced data structures. Small Tree. }
-\label{evaluation:results:unbalanced}
-\end{figure*}
-}
-
-\begin{figure*}
-\begin{center}
-\input{plots/balanced3}
-\end{center}
-\caption{Throughput of balanced data
-structures.}
-\label{evaluation:results:balanced}
-\end{figure*}
-
-\Xomit{
-\begin{figure*}
-\begin{center}
-\input{plots/balanced3small}
-\end{center}
-\caption{Throughput of balanced data
-structures. Small Tree.}
-\label{evaluation:results:balanced}
-\end{figure*}
-}
-
-\Xomit{
 \begin{figure*}
 	\begin{center}
 	\begin{{subfigure}[t]{.35\textwidth}
@@ -255,7 +246,6 @@ or a mix of insert and delete operations.}
 \label{evaluation:results:skiplist}
 \end{figure*}
 }
-}
 
 \begin{figure*}
 \begin{center}
@@ -266,7 +256,6 @@ and half the threads execute insert and delete operations (middle right).}
 \label{evaluation:results:skiplist}
 \end{figure*}
 
-\Xomit{
 \begin{figure*}
 	\begin{center}
 	\begin{subfigure}[t]{.35\textwidth}
@@ -287,6 +276,7 @@ and half the threads execute insert and delete operations.}
 \label{evaluation:results:skiplist10}
 \end{figure*}
 
+
 \begin{figure*}
 	\begin{center}
 	\begin{subfigure}[t]{.35\textwidth}
@@ -306,9 +296,6 @@ and half the threads execute insert and delete operations.}
 and half the threads execute insert and delete operations.}
 \label{evaluation:results:skiplist1000}
 \end{figure*}
-}
-
-
 
 \paragraph{Results}
 We start the evaluation 
@@ -337,7 +324,7 @@ Indeed, the results show that \kary's throughput for range query is comarable to
 
 We also experimented with mixed workloads for large queries with large ranges varying between $1000$ to $2000$ keys (the results appear in Appendix~\ref{sec:appendix:results}). Here the impact of concurrent update operations on range queries is most pronounced in the results of \kary.
 
-\Xomit{
+
 The evaluation of range queries focuses on a mixed workload, where half the
 threads are dedicated to performing range queries, and the other half perform a
 mix of insert and delete operations (50\% each).
@@ -373,8 +360,7 @@ ranges, and 10x for update operations, regardless of the range size. The improve
 The simplicity of the non-linearizable implementation of \skiplist allows it to perform better than \autoSkiplist on range queries.  However, the performance of
 \autoSkiplist is almost identical to that of \skiplist --and even better in some cases, when comparing the update operations.
 %despite the fact that \skiplist performs inconsistent iterations.
-}
-\Xomit{
+
 Figure~\ref{evaluation:results:range1000}
 shows that, for large ranges, \bronson scales well up to $8$ threads, outperforming
 all other implementations, but at $32$ threads its performance deteriorates.
