remove additional results from the appendix

--- a/Tex/src-DISC/document.tex
+++ b/Tex/src-DISC/document.tex
@@ -102,7 +102,7 @@ Maya Arbel is a full-time student.}
 
 \appendix
 \input{proof-appendix}
-\input{results-appendix}
+%\input{results-appendix}
 
 
 \end{document}
