--- a/Tex/src-DISC/plots/balanced3.tex
+++ b/Tex/src-DISC/plots/balanced3.tex
@@ -15,6 +15,8 @@
 {results/trees-i1000000-u100.log};
 \addplot [blues4,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/trees-i1000000-u100.log};
+\addplot [black,mark=square] table [x={threads}, y={OptLockRemovalTreap}]
+{results/trees-i1000000-u100.log}; 
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -31,10 +33,12 @@
 {results/trees-i1000000-u50.log};
 \addplot [blues4,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/trees-i1000000-u50.log};
+\addplot [black,mark=square] table [x={threads}, y={OptLockRemovalTreap}]
+{results/trees-i1000000-u50.log}; 
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
-\begin{axis}[mystyle,balanced, 
+\begin{axis}[mystyle, 
 				 title={\textbf{read-only}},]
 \addplot [black,mark=square*] table [x={threads}, y={LockRemovalTreap}]
 {results/trees-i1000000-u0.log}; 
